# Project-Qml

Project/Calculator/: Calculator.pro.user.0c19a16  Calculator.pro.user.a035cf8  main.cpp  main.qml  test.cpp  test.h
Project/Car/: CMakeLists.txt  CarRedwallpaper  CarYellow  MeterDisplay.qml  PersonDisplay.qml  SecondWindow.qml  main.cpp  main.qml  qml.qrc
Project/Car/CarDB/: CMakeLists.txt  dashdb.cpp  dashdb.h
Project/Car/CarDisplay/: CMakeLists.txt  dashboard.cpp  dashboard.h
Project/Qml_TimerTask/: Qml_TimerTask.pro  main.cpp  main.qml  timer.cpp  timer.h
Project/phonebook/: PHONEBOOK.pro  call.cpp  call.h  main.cpp  main.qml  test.cpp  test.h
